--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ h1{
     font-family: cursive;
 }*/
 
-*{
+/*{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -54,6 +54,98 @@ fieldset{
     padding: 20px;
 }
 
+legend{
+    font-size: 1.3em;
+    font-weight: 900;
+}
+
+label{
+    display: block;
+}
+
+fieldset > span{
+    border:  1px solid #6278B0;
+    color: #42579C;
+    padding: 20px 40px;
+    display: block;
+    background: url('./../images/infoicon.png') no-repeat center left #CCE9F8;
+    background-position: 15px 15px;
+}
+
+.formElement{
+    padding: 5px 10px;
+    width: 300px;
+    margin-bottom: 15px;
+}
+
+#cancelForm, #submitForm{
+    padding: 5px 15px;
+    text-align: center;
+    background-color: #D9534F;
+    font-size: 1.3em ;
+    color: white;
+    border: 0;
+    border-radius: 5px;
+}
+
+#submitForm{
+    background-color: #56C56F;
+}
+
+#submitForm:hover{
+    cursor: pointer;
+    background-color: #56C56F;
+}
+#cancelForm:hover{
+    cursor: pointer;
+    background-color: #D9534F;
+}
+
+input.formElement#userName{
+    width: 500px;
+}*/
+
+*{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body{
+    font-size: 15px;
+    color: gray;
+    margin: 0;
+    padding: 0;
+}
+
+h1{
+    background-color:teal;
+    margin: 0;
+    padding: 20px;
+    color: white;
+}
+
+.menu{
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    background-color: lightpink;
+    color: white;
+}
+
+.menu > li{
+    margin-right: 20px;
+    padding: 20px;
+}
+
+.menu > li:hover{
+    cursor: pointer;
+    background-color: lightpink;
+}
+
+fieldset{
+    border: 2px green;
+    margin: 20px;
+    padding: 20px;
+}
 legend{
     font-size: 1.3em;
     font-weight: 900;
@@ -100,7 +192,3 @@ fieldset > span{
     cursor: pointer;
     background-color: #D9534F;
 }
-
-/*input.formElement#userName{
-    width: 500px;
-}*/
